More problems solved